--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Games#new</h1>
-<p>Find me in app/views/games/new.html.erb</p>
+
+
+<div class="container m-5 p-3 ">
+  <h1 class="title text-center">NEW GAME</h1>
+    <div class="cards d-flex justify-content-center">
+      <% @letters.each do |letter| %>
+      <div class="card bg-primary p-3 m-3">
+        <%= letter %>
+      </div>
+      <% end %>
+    </div>
+</div>
+
+<div class="container">
+    <form action="/score" method="post">
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+      <div class="form-group">
+        <label for="word">What is the longest word you can find ?</label>
+        <input type="text" name="word" class="form-control">
+        <%= hidden_field_tag :letters, @letters %>
+      </div>
+      <input type="submit" value="see my score" class="btn btn-primary">
+    </form>
+</div>
